--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -51,10 +51,10 @@ jobs:
         fi
 
         echo "Could not find a valid artifact for ${{ matrix.gfm_version }}; building another"
-        # build GFM and set up LIBCMARKDIR in $WORDIR
-        bash $GITHUB_WORKSPACE/pelican/build-cmark.sh ${{ matrix.gfm_version }} $WORKDIR $WORKDIR |\
-          grep "export LIBCMARKDIR" >/tmp/libcmarkdir.$$
-        source /tmp/libcmarkdir.$$
+        # build GFM and set up LIBCMARKDIR
+        export LIBCMARKDIR=/tmp/gfm-${{ matrix.gfm_version }}
+        mkdir -p ${LIBCMARKDIR}
+        bash $GITHUB_WORKSPACE/pelican/build-cmark.sh ${{ matrix.gfm_version }} ${LIBCMARKDIR}
 
         # Tell the save step what to save
         echo "created=${LIBCMARKDIR}" | tee -a $GITHUB_OUTPUT
