--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -18,8 +18,6 @@ on:
       - 'pelican/build-cmark.sh'
   workflow_dispatch:
 
-env:
-    WORKDIR: /opt/pelican-asf # where to build GFM
 jobs:
   build-artifact:
     runs-on: ubuntu-latest
@@ -35,7 +33,7 @@ jobs:
       id: build_gfm
       run: |
         # N.B. This must agree with the definition in pelican/action.yml
-        export GFM_ARTIFACT_KEY=gfm-lib-${{ matrix.gfm_version }}
+        export GFM_ARTIFACT_KEY=gfm-lib-${{ matrix.gfm_version }}-HACK
         echo "GFM_ARTIFACT_KEY=${GFM_ARTIFACT_KEY}" >> $GITHUB_ENV
 
         # Check if artifact is present (list all)
