--- a/stash/restore/action.yml
+++ b/stash/restore/action.yml
@@ -30,14 +30,12 @@ inputs:
     required: true
 
   path:
-    description: 'A file, directory or wildcard pattern that describes what to upload'
-    required: true
+    description: 'The directory the stash will be restored in.'
     default: ${{ github.workspace }}
 
   token:
     description: 'GITHUB_TOKEN to use to authenticate against the artifacts api.'
     default: ${{ github.token }}
-    required: true
 outputs:
   stash-hit:
     description: >
