--- a/pelican/action.yml
+++ b/pelican/action.yml
@@ -45,7 +45,7 @@ runs:
       run: |
         (
           test "${{ inputs.debug }}" == 'true' || exec >/dev/null
-          pip3 install --break-system-packages pelican==${{ inputs.version }} markdown bs4 ezt requests
+          PIP_BREAK_SYSTEM_PACKAGES=1 pip3 install pelican==${{ inputs.version }} markdown bs4 ezt requests
         )
         python3 -V
         echo "Pelican version:"
