--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -35,7 +35,7 @@ runs:
       run: |
         (
           test "${{ inputs.debug }}" == 'true' || exec >/dev/null
-          npm install
+          npm install asciidoctor @asciidoctor/reveal.js
         )
     
     - name: Generate slide decks from markdown
