look for convert.js in the action path, not in the repo

--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -42,7 +42,7 @@ runs:
       shell: bash
       run: |
         for file in `ls ${{ inputs.srcdir }}`; do
-          node convert-slides.js $file
+          node ${{ github.action_path }}/convert-slides.js $file
         done
 
     - name: Check out previous branch
