convert-slides.js needs to be in the same directory as the adoc?

--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -41,8 +41,10 @@ runs:
     - name: Generate slide decks from markdown
       shell: bash
       run: |
-        for file in `ls ${{ inputs.srcdir }}`; do
-          node ${{ github.action_path }}/convert-slides.js $file
+        cd ${{ inputs.drcdir }}
+        ln -s ${{ github.action_path }}/convert-slides.js .
+        for file in `ls`; do
+          node convert-slides.js $file
         done
 
     - name: Check out previous branch
