Working with the default directory

--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -4,7 +4,7 @@ inputs:
   srcdir:
     description: "AsciiDoc sourcefile directory"
     required: false
-    default: "."
+    default: "srcfiles"
   dest_branch:
     description: "Slidedeck Output branch"
     required: false
