--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -41,18 +41,16 @@ runs:
     - name: Set up Asciidoc environment
       shell: bash
       run: |
-        echo $(ls -al)
-        cd "${{ inputs.srcdir }}"
         ln -s "${{ github.action_path }}/convert-slides.js" .
-
+      working-dir: "${{ inputs.srcfile }}"
     - name: 
       shell: bash
       run: |
         echo $(ls -al)
-        cd "${{ inputs.srcdir }}"
         for file in $(ls .); do
           node convert-slides.js $file
         done
+      working-dir: "${{ inputs.srcfile }}"
 
     - name: Check out previous branch
       if: ${{ inputs.publish == 'true' }}
