--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -35,12 +35,13 @@ runs:
       run: |
         (
           test "${{ inputs.debug }}" == 'true' || exec >/dev/null
+          npm install
         )
+      working-directory: "${{ github.action_path }}"
     
     - name: Set up Asciidoc environment
       shell: bash
       run: |
-        npm install asciidoctor @asciidoctor/reveal.js
         ln -s "${{ github.action_path }}/convert-slides.js" .
       working-directory: "${{ inputs.srcdir }}"
     - name: 
