--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -50,6 +50,8 @@ runs:
         echo $(ls -al)
         mkdir "${{ inputs.tempdir }}"
         for file in `ls`; do
+          if $(echo $file | awk -F. '{print $NF}') != ".adoc":
+            continue
           echo $file
           node convert-slides.js $file
           mv $(basename $file .adoc).html "${{ inputs.tempdir }}" 
