Bash syntax is still not python syntax

--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -50,7 +50,7 @@ runs:
         echo $(ls -al)
         mkdir "${{ inputs.tempdir }}"
         for file in `ls`; do
-          if $(echo $file | awk -F. '{print $NF}') != ".adoc"); then
+          if [[ "$(echo $file | awk -F. '{print $NF}')" != ".adoc" ]]; then
             continue
           fi
           echo $file
