--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -20,7 +20,7 @@ inputs:
   tempdir:
     description: "Temporary Directory name"
     required: false
-    default: '../output.tmp'
+    default: 'output.tmp'
   debug:
     description: "AsciiDoc Debug mode"
     required: false
