--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -88,7 +88,7 @@ runs:
         rm -rf "${{ inputs.output }}"
         git rm --quiet -r --ignore-unmatch --cached "${{ inputs.output }}"/*
         # replace with generated output
-        mv "${{ inputs.tempdir }}" "${{ inputs.output }}"
+        mv "${{ inputs.srcdir }}/${{ inputs.tempdir }}" "${{ inputs.output }}"
         git diff # Show changes
         git add "${{ inputs.output }}"
         git status
