--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -35,7 +35,7 @@ runs:
       run: |
         (
           test "${{ inputs.debug }}" == 'true' || exec >/dev/null
-          npm install "${{ github.action_path }}/package.json"
+          npm install asciidoc @asciidoc-reveal.js
         )
       working-directory: "${{ inputs.srcdir }}"
     
