--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -58,6 +58,7 @@ runs:
           node convert-slides.js $file
           mv $(basename $file .adoc).html "${{ inputs.tempdir }}"/ 
         done
+        mv package.json "${{ inputs.tempdir }}"
       working-directory: "${{ inputs.srcdir }}"
 
     - name: Check out previous branch
