--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -35,10 +35,11 @@ runs:
       run: |
         (
           test "${{ inputs.debug }}" == 'true' || exec >/dev/null
-          cp "${{ github.action_path }}/package.json" .
+          #          cp "${{ github.action_path }}/package.json" .
           npm install
         )
-      working-directory: "${{ inputs.srcdir }}"
+        #      working-directory: "${{ inputs.srcdir }}"
+        working-directory: "${{ github.action_path }}"
     
     - name: Set up Asciidoc environment
       shell: bash
