--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -97,7 +97,7 @@ runs:
         # replace with generated output
         #        ls "${{ inputs.srcdir }}/${{ inputs.tempdir }}"
         mv "${{ inputs.srcdir }}/${{ inputs.tempdir }}" "${{ inputs.output }}"
-        cp -r "${{ inputs.assets }}" "${{ inputs.output }}"
+        cp -r "${{inputs.srcdir}}/${{ inputs.assets }}" "${{ inputs.output }}"
         git diff # Show changes
         git add "${{ inputs.output }}"
         git status
@@ -108,4 +108,3 @@ runs:
           echo "No change"
           true # ensure step is successful
         fi
-
