Action assumes working in the workspace already no need for explicit def

--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -97,7 +97,7 @@ runs:
         # replace with generated output
         #        ls "${{ inputs.srcdir }}/${{ inputs.tempdir }}"
         mv "${{ inputs.srcdir }}/${{ inputs.tempdir }}" "${{ inputs.output }}"
-        cp -r "${{ github.workspace }}/${{ inputs.assets }}" "${{ inputs.output }}"
+        cp -r "../${{ inputs.assets }}" "${{ inputs.output }}"
         git diff # Show changes
         git add "${{ inputs.output }}"
         git status
