chore(stash): only run test workflow on relevant changes

--- a/.github/workflows/stash-action-test.yml
+++ b/.github/workflows/stash-action-test.yml
@@ -15,9 +15,15 @@ name: Test Stash Action
 
 on:
   pull_request:
+    paths:
+      - ".github/workflows/stash-action-test.yml"
+      - "stash/**"
   push:
     branches:
       - main
+    paths:
+      - ".github/workflows/stash-action-test.yml"
+      - "stash/**"
 
 permissions:
   contents: read
